Fix: resolve 403 Forbidden error, update SecurityConfig and User Entity