@@ -1,6 +1,6 @@
 package com.example.foodreview.config;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -15,65 +15,55 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
 
-    @Autowired
-    private JwtAuthenticationFilter jwtAuthenticationFilter;
-
-    @Autowired
-    private AuthenticationProvider authenticationProvider;
+    private final JwtAuthenticationFilter jwtAuthFilter;
+    private final AuthenticationProvider authenticationProvider;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
             .csrf(csrf -> csrf.disable())
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/auth/**", "/uploads/**", "/error").permitAll()
+                // 1. API công khai
+                .requestMatchers("/api/auth/**", "/error", "/uploads/**").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/foods/**", "/api/categories/**").permitAll()
+                // Rất quan trọng: Cho phép lệnh OPTIONS (Pre-flight) của trình duyệt
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                // 2. API dành cho User & Admin (Chỉ cần đăng nhập)
+                .requestMatchers("/api/orders/my-orders", "/api/orders/create").authenticated()
+                .requestMatchers("/api/users/profile").authenticated()
+                .requestMatchers(HttpMethod.GET, "/api/orders/{id}").authenticated()
+
+                // 3. API dành riêng cho ADMIN & DRIVER (Trang quản lý)
+                .requestMatchers(HttpMethod.GET, "/api/orders").hasAnyAuthority("ADMIN", "DRIVER", "ROLE_ADMIN", "ROLE_DRIVER")
+                .requestMatchers("/api/orders/**").hasAnyAuthority("ADMIN", "DRIVER", "ROLE_ADMIN", "ROLE_DRIVER")
+                .requestMatchers("/api/users/**").hasAnyAuthority("ADMIN", "ROLE_ADMIN")
                 
-                // Các API công khai (GET)
-                .requestMatchers(HttpMethod.GET, 
-                    "/api/food/**",       
-                    "/api/restaurants/**", 
-                    "/api/categories/**", 
-                    "/api/comments/**",
-                    "/api/vouchers/**",  
-                    "/api/user-vouchers/**", // Đã thêm dòng này từ bước trước để sửa lỗi 403
-                    "/api/reviews/**"  
-                ).permitAll()
-                // Voucher có thể POST công khai
-                .requestMatchers(HttpMethod.POST, "/api/vouchers/**").permitAll()
                 .anyRequest().authenticated()
             )
+            .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authenticationProvider(authenticationProvider)
-            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        
-        // 👇 [ĐÃ SỬA ĐOẠN NÀY] Dùng setAllowedOriginPatterns thay vì setAllowedOrigins
-        // Giúp chấp nhận mọi subdomain của Vercel (vd: link preview, link chính...)
-        configuration.setAllowedOriginPatterns(Arrays.asList(
-            "http://localhost:*",              // Chấp nhận mọi port localhost (3000, 5173...)
-            "https://*.vercel.app"             // Chấp nhận TẤT CẢ các link đuôi .vercel.app
-        ));
-
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept"));
-        configuration.setAllowCredentials(true);
-        configuration.setExposedHeaders(List.of("Authorization"));
-
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://127.0.0.1:5173"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+        config.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 }
